# voice-to-instruction

./: README.md  pyproject.toml
src/: __init__.py  arguments.py  config.py  constants.py  main.py
src/core/: recognition.py  resources.py
src/ops/: phonetic.py  screen.py
src/utils/: files.py
