[tool.poetry]
name = "voice-to-label"
version = "0.1.0"
description = ""
authors = ["raufer <raufer92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"
SpeechRecognition = "^3.8.1"
numpy = "^1.21.0"
pocketsphinx = "^0.1.15"
PyAudio = "^0.2.11"
jupyterlab = "^3.0.16"
Fuzzy = "^1.2.2"
pyphonetics = "^0.5.3"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
